--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.1.1",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
@@ -20,6 +19,7 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.59.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
